<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_home">

  <fragment
    android:id="@+id/navigation_home"
    android:name="com.cloudHospital.ui.home.HomeFragment"
    android:label="@string/title_featured"
    tools:layout="@layout/fragment_home" />

  <fragment
    android:id="@+id/navigation_dashboard"
    android:name="com.cloudHospital.ui.dashboard.DashboardFragment"
    android:label="@string/title_search"
    tools:layout="@layout/fragment_dashboard" />

  <fragment
    android:id="@+id/navigation_notifications"
    android:name="com.cloudHospital.ui.notifications.NotificationsFragment"
    android:label="@string/title_booking"
    tools:layout="@layout/fragment_notifications" />

  <fragment
      android:id="@+id/navigation_chat"
      android:name="com.cloudHospital.ui.chat.ChatFragment"
      android:label="@string/title_chat"
      tools:layout="@layout/fragment_chat" />

  <fragment
      android:id="@+id/navigation_more"
      android:name="com.cloudHospital.ui.more.MoreFragment"
      android:label="@string/title_more"
      tools:layout="@layout/fragment_more" />
</navigation>